--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FITZROY KLEE</title>
+  <link rel="stylesheet" type="text/css" href="FITZROY CSS.css">
+  <script src="FITZROY JS.js"></script>
 </head>
 <body>
-    
+  <div id="desktop1-container">
+    <div class="head-container">
+      <img src="FITZROY-TITLE.png" alt="FITZROY KLEE" class="title" />
+      <div id="box"> 
+        <ul class="menu">
+          <li><a href="./FITZROY-FURNITURE.html">FURNITURE</a></li>
+          <li><a href="#">ABOUT US</a></li>
+          <li><a href="#">CONTACT US</a></li>
+        </ul>
+      </div>
+    </div>
+  <img class="BG" src="FITZROY-BG.png" alt="fitz-background" />
+<div class="inspiring-quote">
+      <div>
+        <span>«Design must serve rather than dominate people»</span>
+        <br />
+        <span>Dieter Rams, Industrial Designer</span>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
+
